Lesson-28/k8s-admission-webhook/1.Demo-NonRootImages/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-validator
  namespace: webhook-demo
spec:
  selector:
    app: pod-validator
  ports:
    - port: 8443
      targetPort: 8443
