Lesson-28/k8s-admission-webhook/1.Demo-NonRootImages/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-validator
webhooks:
  - name: pod-validator.webhook-demo.svc
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
    clientConfig:
      service:
        name: pod-validator
        namespace: webhook-demo
        path: "/validate"
        port: 8443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURxakNDQXBLZ0F3SUJBZ0lVZU5UZVVmYVpLSDY2b2YwM2VCR2thbVEvZ2Jvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tURW5NQ1VHQTFVRUF3d2VjRzlrTFhaaGJHbGtZWFJ2Y2k1M1pXSm9iMjlyTFdSbGJXOHVjM1pqTUI0WApEVEkxTVRBeU1ERTVNVGcwT0ZvWERUSTJNVEF5TURFNU1UZzBPRm93S1RFbk1DVUdBMVVFQXd3ZWNHOWtMWFpoCmJHbGtZWFJ2Y2k1M1pXSm9iMjlyTFdSbGJXOHVjM1pqTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEEKTUlJQkNnS0NBUUVBME8wenJlVlgzZjQ1YXVFUzlqWlNpZy94ZnBrS1N6WTYycEFIOWNLRnJDa0VrMEZSRFhzegpQdEFNYkg0OVhI [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 10
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: [webhook-demo]
